// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render should render component 1`] = `
<Page
  navModel={
    Object {
      "main": Object {
        "text": "Configuration",
      },
      "node": Object {
        "text": "Plugins",
      },
    }
  }
>
  <PageContents
    isLoading={true}
  >
    <OrgActionBar
      linkButton={
        Object {
          "href": "https://grafana.com/plugins?utm_source=grafana_plugin_list",
          "title": "Find more plugins on Grafana.com",
        }
      }
      searchQuery=""
      setSearchQuery={[Function]}
      target="_blank"
    />
  </PageContents>
</Page>
`;

exports[`Render should render list 1`] = `
<Page
  navModel={
    Object {
      "main": Object {
        "text": "Configuration",
      },
      "node": Object {
        "text": "Plugins",
      },
    }
  }
>
  <PageContents
    isLoading={false}
  >
    <OrgActionBar
      linkButton={
        Object {
          "href": "https://grafana.com/plugins?utm_source=grafana_plugin_list",
          "title": "Find more plugins on Grafana.com",
        }
      }
      searchQuery=""
      setSearchQuery={[Function]}
      target="_blank"
    />
    <PluginList
      plugins={Array []}
    />
  </PageContents>
</Page>
`;
